--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:A4o46gBlz43LWJYpVimb/OVip2T9CSTSuG+pGjRXzL0=
+APP_KEY=base64:vHUdAk1A84wgzgGwI7YtzLy85DyCuH+Cj/s+mkpAeTA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=139.255.11.84
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=laundry_service
+DB_USERNAME=student
+DB_PASSWORD=isbmantap
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
