--- a/.env
+++ b/.env
@@ -30,10 +30,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=587
+MAIL_PORT=465
 MAIL_USERNAME=luxurybubblelaundry@gmail.com
 MAIL_PASSWORD=Luxurybubble1
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
